tests/transpiler/x/hs/order_by_map.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (a, b)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
data GenType1 = GenType1
  { a :: Int,
    b :: Int
  } deriving (Show)


_data = [GenType1 {a = 1, b = 2}, GenType1 {a = 1, b = 1}, GenType1 {a = 0, b = 5}]

sorted = sortOn (\x -> Map.fromList [(a, x.a), (b, x.b)]) [x | x <- _data]

main :: IO ()
main = do
    print (sorted)
